[gd_scene load_steps=3 format=3 uid="uid://d2oyehefkta8x"]

[ext_resource type="Script" path="res://interface/graphview_node.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://blpvbio2e5xwf" path="res://icons/edit.svg" id="2"]

[node name="Control" type="GraphNode"]
custom_minimum_size = Vector2(128, 0)
offset_right = 134.0
offset_bottom = 165.0
size_flags_vertical = 0
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1")

[node name="Prereq_Label" type="Label" parent="."]
layout_mode = 2
tooltip_text = "This shows when a script in one encounter refers to a different encounter."
mouse_filter = 1
text = "Script Links"

[node name="Consequence_Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This shows when a reaction in one encounter leads directly to a different encounter via a next-page effect."
mouse_filter = 1
text = "Next-Page Links"

[node name="VBC" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBC"]
layout_mode = 2

[node name="Excerpt" type="Label" parent="VBC"]
layout_mode = 2

[node name="Desirability" type="VBoxContainer" parent="VBC"]
layout_mode = 2

[node name="Label" type="Label" parent="VBC/Desirability"]
layout_mode = 2
text = "Desirability:"

[node name="Spinner" type="SpinBox" parent="VBC/Desirability"]
layout_mode = 2
size_flags_horizontal = 0
min_value = -0.99
max_value = 0.99
step = 0.01
value = 0.01

[node name="EditButton" type="Button" parent="VBC"]
layout_mode = 2
text = "Edit"
icon = ExtResource("2")

[connection signal="dragged" from="." to="." method="_on_Control_dragged"]
[connection signal="value_changed" from="VBC/Desirability/Spinner" to="." method="_on_spinner_value_changed"]
[connection signal="pressed" from="VBC/EditButton" to="." method="_on_EditButton_pressed"]
